# GoL-PlusPlus

./: .gitignore  CMakeLists.txt  README.md
include/: Animal.hpp  Cell.hpp  Colors.hpp  Entity.hpp  EntityConfig.hpp  EntityFactory.hpp  GameOfLife.hpp  Grid.hpp  Human.hpp  Pack.hpp  Plant.hpp  Wall.hpp  Wolf.hpp
src/: Animal.cpp  Cell.cpp  EntityFactory.cpp  GameOfLife.cpp  Grid.cpp  Human.cpp  Pack.cpp  Plant.cpp  Wall.cpp  Wolf.cpp  main.cpp
